Add the URL as a link above the tables

--- a/panel.html
+++ b/panel.html
@@ -17,7 +17,7 @@
       table:nth-child(even){
          background: #EEE; 
       }
-      #clearBtn{
+      #clear-btn{
         margin-top: 10px;
       }
       .call-num{
@@ -30,7 +30,7 @@
    This panel shows a detailed view of the Display Ad parameters called from the currently viewed page. 
    <br>
    <div id='tables'></div>
-   <button id='clearBtn'>Clear</button>
+   <button id='clear-btn'>Clear</button>
   </body>
 </html>
 
