Support YP beacon calls.

--- a/panel.html
+++ b/panel.html
@@ -27,10 +27,11 @@
   	</style>
   </head>
   <body>
-   This panel shows a detailed view of the Display Ad parameters called from the currently viewed page. 
-   <br>
-   <div id='tables'></div>
-   <button id='clear-btn'>Clear</button>
+    <p>This panel shows a detailed view of the ads called from the current page.</p>
+    <input type="checkbox" id="aol-box">AOL Display Ads
+    <input type="checkbox" id="yp-box">YP Ads
+    <div id="details"></div>
+    <button id="clear-btn">Clear</button>
   </body>
 </html>
 
