Un-nest if statements.

--- a/panel.html
+++ b/panel.html
@@ -28,8 +28,8 @@
   </head>
   <body>
     <p>This panel shows a detailed view of the ads called from the current page.</p>
-    <input type="checkbox" id="aol-box">AOL Display Ads
-    <input type="checkbox" id="yp-box">YP Ads
+    <input type="checkbox" id="aol-box"><label for="aol-box">AOL Display Ads</label>
+    <input type="checkbox" id="yp-box"><label for="yp-box">YP Ads</label>
     <div id="details"></div>
     <button id="clear-btn">Clear</button>
   </body>
