Add icons. Yext support

--- a/panel.html
+++ b/panel.html
@@ -28,8 +28,10 @@
   </head>
   <body>
     <p>This panel shows a detailed view of the ads called from the current page.</p>
-    <input type="checkbox" id="aol-box"><label for="aol-box">AOL Display Ads</label>
-    <input type="checkbox" id="yp-box"><label for="yp-box">YP Ads</label>
+    <input type="checkbox" id="aol-box"><label for="aol-box">AOL Display</label>
+    <input type="checkbox" id="yp-box"><label for="yp-box">YP</label>
+    <input type="checkbox" id="yext-box"><label for="yext-box">Yext</label>
+    <input type="checkbox" id="citygrid-box"><label for="citygrid-box">CityGrid</label>
     <div id="details"></div>
     <button id="clear-btn">Clear</button>
   </body>
